{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e8d62c07-1ef0-4e3a-bfc6-26d86805abe8",
            "actions": [
                {
                    "name": "Bomb",
                    "type": "Button",
                    "id": "98447b4e-59cd-4a60-b214-65aef39563e7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b9645a3e-0601-463d-aef8-a2420ab063cf",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "169b71ed-76e4-4cc2-bb0a-e61c14e8840f",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5bfb0e7-64d7-4d26-adfa-7c05699b260f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player 1 (Gamepad)",
            "bindingGroup": "Player 1 (Gamepad)",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}